added package script for dev deploy

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-fe": "cd client && npm run build && cd ..",
+    "client:build": "cd client && npm run build && cd ..",
     "start": "node server/index.ts",
-    "dev:server": "nodemon --watch './**/*.ts' --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm\" src/index.ts"
+    "dev:server": "nodemon --watch './**/*.ts' --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm\" src/index.ts",
+    "dev:deploy": "npm run client:build && npm run dev:server"
   },
   "keywords": [],
   "author": "",
