--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "client:build": "cd client && npm run build && cd ..",
     "start": "node server/index.ts",
     "dev:server": "nodemon --watch './**/*.ts' --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm\" src/index.ts",
@@ -17,12 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "fs": "^0.0.1-security",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
+    "jest": "^27.5.1",
     "typescript": "^4.6.3"
   }
 }
